--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>docb</title>
+
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/bootstrap.min.css" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
